--- a/data/label.sty
+++ b/data/label.sty
@@ -256,15 +256,19 @@
 %
 
 % Roll
-\customlabel{roll:}{}
+% \customlabel{roll:}{}
+% \customlabel{roll:Knowledge}{知識}
+% \customlabel{roll:Might}{力量}
+% \customlabel{roll:Sanity}{神志}
+% \customlabel{roll:Speed}{速度}
 \customlabel{roll:Combat}{戰鬥}
 \customlabel{roll:Damage}{傷害}
 \customlabel{roll:Event}{事件}
 \customlabel{roll:Haunt}{作祟}
-\customlabel{roll:Task}{??}
+\customlabel{roll:Task}{任務}
 \customlabel{roll:Trait}{屬性}
 
 % Usage
 \customlabel{usage:}{}
-\customlabel{usage:companion}{同伴}
-\customlabel{usage:weapon}{武器}
+\customlabel{usage:Companion}{同伴}
+\customlabel{usage:Weapon}{武器}
