--- a/src/card/bhh/item.tex
+++ b/src/card/bhh/item.tex
@@ -34,7 +34,7 @@
   \ThisName{}不會被搶奪。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bhh}{Axe}{weapon}
+\begin{ItemCard}{bhh}{Axe}{Weapon}
   \begin{CardStory}
     非常尖銳。
   \end{CardStory}
@@ -56,7 +56,7 @@
   \end{itemize}
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bhh}{Blood Dagger}{weapon}
+\begin{ItemCard}{bhh}{Blood Dagger}{Weapon}
   \begin{CardStory}
     一把齷齪的武器，\\
     針管自劍柄延伸出，\\
@@ -107,8 +107,8 @@
     \item[4] 獲得１級物理屬性。
     \item[3] 移至任一相鄰的房間。
     \item[2] 獲得１級精神屬性。
-    \item[1] 抽取１張事件卡。
-    \item[0] 將所有屬性降至最低數值，並丟棄此卡。
+    \item[1] 抽取１張事件牌。
+    \item[0] 將所有屬性降至最低數值，並丟棄此牌。
   \end{itemize}
 \end{ItemCard}%
 \linebreak[0]%
@@ -138,7 +138,7 @@
     祂選擇你或許是為了某些目的⋯\\
     像是活體獻祭⋯
   \end{CardStory}
-  每回合一次，當你進行任何\RollBrief{Trait}、\RollBrief{Combat}、或\Roll{Event}前，可摩擦\ThisName{}並犧牲１級神志，多擲２顆骰（至多８顆）。\smallbreak
+  每回合一次，當你進行任何\Roll*{Trait}、\Roll*{Combat}、或\Roll{Event}前，可摩擦\ThisName{}並犧牲１級神志，多擲２顆骰（至多８顆）。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
 \begin{ItemCard}{bhh}{Lucky Stone}{}
@@ -189,7 +189,7 @@
   \end{CardStory}
   每回合一次，你可進行知識檢定嘗試打開\ThisName{}：
   \begin{itemize}
-    \item[6+] 你順利地打開\ThisName{}。抽取２張道具卡，並丟棄此卡。
+    \item[6+] 你順利地打開\ThisName{}。抽取２張道具牌，並丟棄此牌。
     \item[0-5] 你無法理解\ThisName{}的奧妙。
   \end{itemize}
 \end{ItemCard}%
@@ -202,7 +202,7 @@
   每回合一次，你可重擲一顆骰子。你必須使用重擲後的結果。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bhh}{Revolver}{weapon}
+\begin{ItemCard}{bhh}{Revolver}{Weapon}
   \begin{CardStory}
     外型老舊，\\
     但看似極具殺傷力的武器。
@@ -214,7 +214,7 @@
   你不可同時使用多樣武器攻擊。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bhh}{Sacrificial Dagger}{weapon}
+\begin{ItemCard}{bhh}{Sacrificial Dagger}{Weapon}
   \begin{CardStory}
     彎曲的鐵製短劍，\\
     有著神秘的符號與斑斑的血跡。
