--- a/src/card/bww/event.tex
+++ b/src/card/bww/event.tex
@@ -36,9 +36,9 @@
   你可自由選擇是否簽署此契約。\smallbreak
   若你決定簽署此契約，進行一次知識檢定以閱讀此文件：
   \begin{itemize}
-    \item[5+] 你發現這份契約並未綁約，你成功留住了靈魂。獲得１級神志、並抽取１張道具卡。
-    \item[4] 你發現了可以保住靈魂的小漏洞。抽取１張道具卡。
-    \item[2-3] 你失去了靈魂，但獲得了力量。失去１級神志、並抽取１張道具卡。
+    \item[5+] 你發現這份契約並未綁約，你成功留住了靈魂。獲得１級神志、並抽取１張道具牌。
+    \item[4] 你發現了可以保住靈魂的小漏洞。抽取１張道具牌。
+    \item[2-3] 你失去了靈魂，但獲得了力量。失去１級神志、並抽取１張道具牌。
     \item[0-1] 你的靈魂沒有價值，白簽了。失去１級神志。
   \end{itemize}
 \end{EventCard}%
@@ -72,7 +72,7 @@
   請立即進行神志檢定：
   \begin{itemize}
     \item[3+] 抽取一張頂樓的房間板塊，放入屋內，並移至該處。
-    \item[0-2] 失去１點力量，並保留此卡一回合。到你下一個回合開始前，所有探險者的行動步數降至１格。
+    \item[0-2] 失去１點力量，並保留此牌一回合。到你下一個回合開始前，所有探險者的行動步數降至１格。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
@@ -95,10 +95,10 @@
   你可自由選擇是否走進此拱門。\smallbreak
   若你決定走進此拱門，請立即擲３顆骰子：
   \begin{itemize}
-    \item[5-6] 移至任何一間有尚未探索之門的房間，並抽取１張道具卡。
+    \item[5-6] 移至任何一間有尚未探索之門的房間，並抽取１張道具牌。
     \item[3-4] 移至任何一間有尚未探索之門的房間。
     \item[1-2] 你不知為何發生了變化。移至\Room{Entrance Hall}，將你的角色卡翻面，並重置所有數值至起始值。
-    \item[0] 移至\Room{Entrance Hall}，並棄掉一張道具卡。
+    \item[0] 移至\Room{Entrance Hall}，並棄掉一張道具牌。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
@@ -132,8 +132,8 @@
   請選擇一項：
   \begin{itemize}
     \item[•] 切除你的手。失去１點力量，並提升１點神智。
-    \item[•] 替換你的手。失去１點力量，並抽取１張物品卡。
-    \item[•] 保留你的手。失去２點神志，並提升１點力量。移往最鄰近有預兆圖示的房間，並抽取１張預兆卡。
+    \item[•] 替換你的手。失去１點力量，並抽取１張道具牌。
+    \item[•] 保留你的手。失去２點神志，並提升１點力量。移往最鄰近有預兆圖示的房間，並抽取１張預兆牌。
   \end{itemize}
 \end{EventCard}%
 \linebreak[0]%
@@ -147,7 +147,7 @@
   \end{CardStory}
   請立即進行一次神志檢定：
   \begin{itemize}
-    \item[4+] 移至\Room{Arsenal}，並抽取１張物品卡。（若\Room{Arsenal}尚未探索，將其找出並放進屋內。）
+    \item[4+] 移至\Room{Arsenal}，並抽取１張道具牌。（若\Room{Arsenal}尚未探索，將其找出並放進屋內。）
     \item[3] 獲得１級知識。
     \item[3] 失去１級神志。
   \end{itemize}
