--- a/src/card/bww/item.tex
+++ b/src/card/bww/item.tex
@@ -8,13 +8,13 @@
   你可以在有升降機圖示的房間之間傳送移動。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bww}{Boomstick}{weapon}
+\begin{ItemCard}{bww}{Boomstick}{Weapon}
   \begin{CardStory}
     有點生鏽的槍身，\\
     看得出來有被好好的使用過，\\
     不過仍留下了兩發不錯的子彈。
   \end{CardStory}
-  當你抽到此卡時，放置２枚\TokenPenta{Item}在這張卡上。\smallbreak
+  當你抽到此牌時，放置２枚\TokenPenta{Item}在這張牌上。\smallbreak
   你可以犧牲１枚\TokenPenta{Item}，並使用\ThisName{}進行速度７攻擊，防禦方亦用速度進行防禦，並受到物理傷害。\smallbreak
   使用\ThisName{}，你可對任何視線內（透過任何未受阻礙的門可看到）的對手進行攻擊，若攻擊失敗，你不會被反擊。\smallbreak
   當你用盡所有\TokenPenta{Item}時，棄掉\ThisName{}。\smallbreak
@@ -28,7 +28,7 @@
     帶子裡還有一些影像，\\
     你應該好好把它看完。
   \end{CardStory}
-  當你抽到此卡時，將與探險者人數等量的\TokenTri{Knowledge Roll}放置在這張卡上。\smallbreak
+  當你抽到此牌時，將與探險者人數等量的\TokenTri{Knowledge Roll}放置在這張牌上。\smallbreak
   當你持有\ThisName{}時，你可以拿取一枚\TokenTri{Knowledge Roll}，並提升１級知識。\smallbreak
   你無法拿取超過一枚的\TokenTri{Knowledge Roll}。\smallbreak
   當所有\TokenTri{Knowledge Roll}都被拿完時，棄掉\ThisName{}。\smallbreak
@@ -41,7 +41,7 @@
   每回合一次，當你進行神志或知識檢定時，你可重擲任意數量的骰子。你必須使用重擲後的結果。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
-\begin{ItemCard}{bww}{Chainsaw}{weapon}
+\begin{ItemCard}{bww}{Chainsaw}{Weapon}
   \begin{CardStory}
     咈咈、寶貝、咈咈。
   \end{CardStory}
@@ -62,7 +62,7 @@
     用來測量這世上未知的東西。
   \end{CardStory}
   當你回合結束時，有任何對手與你處在同一房間之中，你提升１級知識。\smallbreak
-  當你攻擊時，可棄掉此卡，多擲３顆骰，但此次攻擊只能用於偷取物品。\smallbreak
+  當你攻擊時，可棄掉此牌，多擲３顆骰，但此次攻擊只能用於偷取物品。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
 \begin{ItemCard}{bww}{Effigy}{}
@@ -100,7 +100,7 @@
     鑲嵌著粉紅色花紋的裝飾，\\
     顯露出高貴的質感。
   \end{CardStory}
-  每回合一次，任何一位同房的探險者（包括你）受到物理傷害時，你可以抽取１張道具卡。\smallbreak
-  若你身為／成為叛徒，將此卡放回道具牌堆洗勻。\smallbreak
+  每回合一次，任何一位同房的探險者（包括你）受到物理傷害時，你可以抽取１張道具牌。\smallbreak
+  若你身為／成為叛徒，將此牌放回道具牌堆洗勻。\smallbreak
 \end{ItemCard}%
 \linebreak[0]%
