--- a/src/card/bww/omen.tex
+++ b/src/card/bww/omen.tex
@@ -15,13 +15,13 @@
     人們老是告訴你要跳脫框架思考，\\
     但你現在該擔心的是會死在裡面⋯
   \end{CardStory}
-  當抽到\ThisName{}時，再抽取１張道具卡放在此卡上面。\smallbreak
-  \ThisName{}內的物品不可被棄置或搶奪。當有人要搶奪這個道具，你可以棄掉\ThisName{}以避免該物品被奪走。\smallbreak
+  當抽到\ThisName{}時，再抽取１張道具牌放在此牌上面。\smallbreak
+  \ThisName{}內的物品不可被棄置或搶奪。當有人要搶奪這個物品，你可以棄掉\ThisName{}以避免該物品被奪走。\smallbreak
   在你的回合中，你可將\ThisName{}內的物品棄掉，並將另一個你持有的物品放進\ThisName{}。若\ThisName{}是空的，你可以直接將一個你持有的物品放進\ThisName{}。\smallbreak
   \ThisName{}不可被搶奪。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
-\begin{OmenCard}{bww}{Cat}{companion}
+\begin{OmenCard}{bww}{Cat}{Companion}
   \begin{CardStory}
     一般認為被貓穿越正要行徑的路線\\
     是不幸的預兆，不過換個角度想，\\
@@ -45,7 +45,7 @@
     在一開始就被鎖上了呢？
   \end{CardStory}
   \footnotesize
-  當你要從卡牌或是房間效果上檢定以打開或拿取東西時，可以使用\ThisName{}並多擲４顆骰（至多８顆）。（像是\Room{Locked Room}、\Event{Locked Safe}、\Room{Vault}）\smallbreak
+  當你要從牌牌或是房間效果上檢定以打開或拿取東西時，可以使用\ThisName{}並多擲４顆骰（至多８顆）。（像是\Room{Locked Room}、\Event{Locked Safe}、\Room{Vault}）\smallbreak
   你可以直接進出有\TokenSq{Lock}的房間。\smallbreak
   在你的回合開始時，若你在一扇未上鎖的門旁邊，你可以將１枚\TokenSq{Lock}放在該門上。\smallbreak
   欲通過有\TokenSq{Lock}的門，必須進行知識檢定達 3+ 嘗試解鎖，若成功，移除標記並正常通過該門。
@@ -86,7 +86,7 @@
     \item[4] 這不曉得是什麼血。獲得１級力量、１級速度、１級知識，但失去２級神志。
     \item[3] 你感到興奮。獲得１級物理屬性。
     \item[2] 實驗失敗，沒有效果。
-    \item[1] 你做了個預知夢。受到２點精神傷害，並抽取１張道具卡。
+    \item[1] 你做了個預知夢。受到２點精神傷害，並抽取１張道具牌。
     \item[0] 這有毒！受到２點物理傷害。
   \end{itemize}
 \end{OmenCard}%
