--- a/src/rule/main.tex
+++ b/src/rule/main.tex
@@ -1,92 +1,226 @@
 %!TEX root = ../../rule.tex
 
 \section{主要規則} \label{sec:main}
-遊戲從起始玩家開始，並向左順時針進行，探險者輪流進行回合並探索屋子。\par
-為了簡單起見，所有規則中的「你」皆指正在進行動作或受到卡牌、房屋板塊規則影響的角色——探險者（包含英雄與叛徒）以及怪物。
+
+遊戲從起始玩家開始，並向左順時針進行，探險者輪流進行回合並探索屋子。
+
+為了簡單起見，所有規則中的『你』皆指正在進行動作或受到卡牌、房屋板塊規則影響的角色——探險者（包含英雄與叛徒）以及怪物。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{屬性／檢定}
-每位探險者皆有四個\textbf{〈屬性 Trait〉}，由角色卡四邊的四排數字所表示：\textbf{〈力量 Might〉}、\textbf{〈速度 Speed〉}、\textbf{〈知識 Knowledge〉}、\textbf{〈神志 Sanity〉}。力量與速度為\textbf{〈物理 Physical〉}屬性，而知識與神志為\textbf{〈精神 Mental〉}屬性。\par
-許多卡片、房間板塊、以及遊戲效果會影響你的屬性。當任何效果提升或降低你的任一屬性時，將該屬性的指標滑動相對應的格數。舉例來說，Zoe Ingstrom 的初始力量為３，若有個效果提升她３點力量時，將她的力量指標往數字大的那側滑動，指到４的位置。\par
-每個屬性皆有其最大值，也就是角色卡上該屬性那排數字的最大值。當屬性受到效果影響而提升時，無法超過其最大值。\par
-另外，每個屬性的最小值下方皆有一個\textbf{〈骷髏頭 Skull〉}標誌。在作祟發生後，當你的任一屬性將至骷髏頭標誌時，你的探險者就會死亡。在作祟發生前，沒有人會死亡——換言之，任何屬性皆不會將至骷髏頭標誌。當屬性受到效果影響而降低到或超過骷髏頭標誌時，改為停在該屬性的最小值。舉例來說，Zoe Ingstrom 的初始神志為５，若有個效果降低她２點神志時，將她的神志指標往骷髏頭的那側滑動，指到３的位置。若她再失去２點神志，除非作祟尚未發生，否則她將會死亡。\par
-\textbf{〈傷害 Damage〉}：許多卡片、房間板塊、以及遊戲效果會對你造成傷害。當你受到\textbf{〈物理傷害 Physical Damage〉}時，你可將該傷害自由分配到力量和速度，並對兩個屬性下降總和為該傷害的格數。同樣地，當你受到\textbf{〈精神傷害 Mental Damage〉}時，如同物理傷害的操作，但改為下降知識和神志。\par
-\emph{附註：Zoe Ingstrom 的力量由大到小分別為「７、６、４、４、\textcolor{teal}{『３』}、３、２、２、骷髏」，神志為「８、７、６、６、５、\textcolor{teal}{『５』}、４、３、骷髏」，其中『』為起始值。}
+
+每位探險者皆有四個\textbf{〈屬性 Trait〉}，由角色卡四邊的四排數字所表示：\textbf{〈力量 Might〉}、\textbf{〈速度 Speed〉}、\textbf{〈知識 Knowledge〉}、\textbf{〈神志 Sanity〉}。力量與速度為\textbf{〈物理 Physical〉}屬性，而知識與神志為\textbf{〈精神 Mental〉}屬性。
+
+許多卡牌、房間板塊、以及遊戲效果會影響你的屬性。當任何效果提升或降低你的任一屬性時，將該屬性的指標滑動相對應的格數。舉例來說，Zoe Ingstrom 的初始力量為３，若有個效果提升她３點力量時，將她的力量指標往數字大的那側滑動，指到４的位置。
+
+每個屬性皆有其最大值，也就是角色卡上該屬性那排數字的最大值。當屬性受到效果影響而提升時，無法超過其最大值。
+
+另外，每個屬性的最小值下方皆有一個\textbf{〈骷髏頭 Skull〉}標誌。在作祟發生後，當你的任一屬性將至骷髏頭標誌時，你的探險者就會死亡。在作祟發生前，沒有人會死亡——換言之，任何屬性皆不會將至骷髏頭標誌。當屬性受到效果影響而降低到或超過骷髏頭標誌時，改為停在該屬性的最小值。舉例來說，Zoe Ingstrom 的初始神志為５，若有個效果降低她２點神志時，將她的神志指標往骷髏頭的那側滑動，指到３的位置。若她再失去２點神志，除非作祟尚未發生，否則她將會死亡。
+
+\textbf{〈傷害 Damage〉}：許多卡牌、房間板塊、以及遊戲效果會對你造成傷害。當你受到\textbf{〈物理傷害 Physical Damage〉}時，你可將該傷害自由分配到力量和速度，並對兩個屬性下降總和為該傷害的格數。同樣地，當你受到\textbf{〈精神傷害 Mental Damage〉}時，如同物理傷害的操作，但改為下降知識和神志。
+
+\emph{附註：Zoe Ingstrom 的力量由大到小分別為『７、６、４、４、\textcolor{teal}{「３」}、３、２、２、骷髏』，神志為「８、７、６、６、５、\textcolor{teal}{「５」}、４、３、骷髏』，其中「」為起始值。}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{回合進行}
-在你的回合當中，你可以以任意順序進行以下動作（任意次數）：\par
+
+在你的回合當中，你可以以任意順序進行以下動作（任意次數）：
 \begin{itemize}
   \item \textbf{移動}，
   \item \textbf{探索新房間}，
-  \item \textbf{使用物品}（道具卡與預兆卡），
+  \item \textbf{使用物品}（道具牌與預兆牌），
   \item \textbf{執行擲骰}，
   \item \textbf{發動攻擊}（一回合一次，僅能在作祟發生後執行）。
 \end{itemize}
-在作祟發生前，若你抽到預兆卡，你必須回合結束時進行\textbf{〈作祟檢定 Haunt Roll〉}。作祟發生後，遊戲將會有些許的改變。（詳見\namepageref{sec:haunt}）
+在作祟發生前，若你抽到預兆牌，你必須在回合結束時進行\textbf{〈作祟檢定 Haunt Roll〉}。作祟發生後，遊戲將會有些許的改變。（詳見\namepageref{sec:haunt}）
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{移動}
 
 在你的回合中，你可以移動至多等於探險者的\textbf{速度}的距離。在移動中，你進行任何行動（如使用物品或發動攻擊）。然而，當你因為任何理由而抽牌後，你本回合必須停止移動（但仍然可以繼續進行回合）。
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsection{探索新房間}
-當你的探險者穿越一扇後面沒有房間的門時，檢查房間板塊堆最頂上的房間。如果它符合你在的樓層（\textbf{〈地面 Ground〉、〈地下 Basement〉、〈樓上 Upper〉}），將它翻開並連接在門後，然後移動至房間內，並探索房間。\par
-放置時必須盡量合理化，門口必須對著門口，而如果無法對應所有的門的話，則造成了一些「假象」，例如被鎖死的門或是被釘死的窗戶。（這對於一間作祟的房屋而言，並不是什麼奇怪的事。）你不可以穿越鎖死的門，釘死的窗也不被算盡窗戶裡面（除非作祟劇情中特別規定）。\par
-如果房間板塊頂的房間不符合你在的樓層，將它維持面向下的狀態放至棄牌堆。重複檢查房間板塊頂的房間直到找到符合的房間為止。\par
-你可以穿越門並移動到相鄰的房間。所有門都是開著的，唯一的例外是\Room{Front Door}，這扇門永遠都是鎖著的。你無法離開這個幢房屋或使用\Room{Front Door}（除非作祟劇情中特別規定）。所有室外的房間（如\Room{Patio}）亦屬於房屋的一部分。\par
-樓層間透過樓梯相連。\Room{Grand Staircase}永遠都連到\Room{Upper Landing}；\Room{Stairs from Basement}永遠都連到\Room{Foyer}的秘門，但這扇秘門在\Room{Stairs from Basement}被探索前皆不可使用。\par
-有些房間有特殊符號，代表預兆卡、物品卡、事件卡（詳見\namepageref{ssec:draw}）。有些房間也會有文字敘述，這些文字會在探險者進入或離開房間時發動。如果房間同時有文字與符號，先為特殊符號抽牌，再執行文字敘述的內容。\par
+
+當你的探險者穿越一扇後面沒有房間的門時，檢查房間板塊堆最頂上的房間。如果它符合你在的樓層（\textbf{〈地面 Ground〉、〈地下 Basement〉、〈樓上 Upper〉}），將它翻開並連接在門後，然後移動至房間內，並探索房間。
+
+放置時必須盡量合理化，門口必須對著門口，而如果無法對應所有的門的話，則造成了一些『假象』，例如被鎖死的門或是被釘死的窗戶。（這對於一間作祟的房屋而言，並不是什麼奇怪的事。）你不可以穿越鎖死的門，釘死的窗也不被算盡窗戶裡面（除非作祟劇情有特別規定）。
+
+如果房間板塊頂的房間不符合你在的樓層，將它維持面向下的狀態放至棄牌堆。重複檢查房間板塊頂的房間直到找到符合的房間為止。
+
+你可以穿越門並移動到相鄰的房間。所有門都是開著的，唯一的例外是\Room{Front Door}，這扇門永遠都是鎖著的。你無法離開這個幢房屋或使用\Room{Front Door}（除非作祟劇情有特別規定）。所有室外的房間（如\Room{Patio}）亦屬於房屋的一部分。
+
+樓層間透過樓梯相連。\Room{Grand Staircase}永遠都連到\Room{Upper Landing}；\Room{Stairs from Basement}永遠都連到\Room{Foyer}的秘門，但這扇秘門在\Room{Stairs from Basement}被探索前皆不可使用。
+
+有些房間有特殊符號，代表預兆牌、道具牌、事件牌（詳見\namepageref{ssec:draw}）。有些房間也會有文字敘述，這些文字會在探險者進入或離開房間時發動。如果房間同時有文字與符號，先為特殊符號抽牌，再執行文字敘述的內容。
+
 有些房間會影響移動，另外許多房間有特別的規則（詳見\namepageref{ssec:special-room}）。
 
-\begin{RuleBox}{我可以透過擺放新房間封鎖一個樓層嗎？}%
-  你無法用此方法封鎖樓層，換言之，你無法使一個樓層沒有任何未探索的門。如果所有合理的擺放皆會封鎖該樓層，棄掉該房間板塊並抽取新的直到一間不會封鎖樓層的房間為止。如果所有剩餘的房間皆會封鎖該樓層，則玩家可在最少改動下改變其他房間 的放置（例如改變方向、移往隔壁或交換位置）。\par
+\begin{RuleBox}{我可以透過擺放新房間封鎖一個樓層嗎？}
+  你無法用此方法封鎖樓層，換言之，你無法使一個樓層沒有任何未探索的門。如果所有合理的擺放皆會封鎖該樓層，棄掉該房間板塊並抽取新的直到一間不會封鎖樓層的房間為止。如果所有剩餘的房間皆會封鎖該樓層，則玩家可在最少改動下改變其他房間 的放置（例如改變方向、移往隔壁或交換位置）。
+
   \Room{Mystic Elevator}的移動也可能會封鎖樓層。如果\Room{Mystic Elevator}的檢定結果會導致樓層被封鎖，則電梯不會移動（就算之後可以移開電梯也不行）。
 \end{RuleBox}
 
-\begin{RuleBox}{房間板塊堆用完了怎麼辦？}%
+\begin{RuleBox}{房間板塊堆用完了怎麼辦？}
   如果你用完了房間板塊堆，將棄牌堆洗勻，並用這些牌當作新的房間板塊堆。如果你用光了一層樓的所有房間板塊，則無法繼續在該層樓探索新房間——你已經找到所有房間了。
 \end{RuleBox}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsection{特殊房間} \label{ssec:special-room}
+
 有些房間板塊上印有規則敘述房間的效果，本章節會介紹大多數這類房間的特別規則以及介紹。這些特別的房間在房間名字上會多加一個星號(*)。
 
-\begin{RuleBox}{\Room{Chasm}、\Room{Catacombs}、\Room{Vault}、\Room{Tower}}%
-  這些房間被稱為\textbf{〈屏障房間 Barrier Room〉}。屏障房間被屏障分為兩側，並且會阻擋你從一側移動到另一側。欲穿過屏障，必須進行房間板塊上寫的\textbf{\Roll{Trait}}（力量、速度、知識、神志）。每回合可執行一次這個檢定。穿過屏障不需花費行動點數。若檢定失敗，你本回合必須停止移動。你下回合仍可重新嘗試此檢定，亦可選擇回頭離開。\par
-  探險者無法與屏障對面的其他探險者戰鬥或互動。怪物永遠忽視屏障，但若怪物結束移動於屏障房間時，其操控者必須決定牠要待在哪一側。\par
-  若任何效果使你落入屏障房間時，你必須決定要落入哪一側。若任何效果要求你放置方形標記在此房（像是\Room{Collapsed Room}或\Event{Secret Passage}），則該標記將永久放置於你選擇的那側。
+\begin{RuleBox}{\Room{Chasm}、\Room{Catacombs}、\Room{Vault}、\Room{Tower}}
+  這些房間被稱為\textbf{〈屏障房間 Barrier Room〉}。屏障房間被屏障分為兩側，並且會阻擋你從一側移動到另一側。欲穿過屏障，必須進行房間板塊上寫的\textbf{\Roll{Trait}}（力量、速度、知識、神志）。每個自己的回合可執行一次這個檢定。穿過屏障不需花費行動點數。若檢定失敗，你本回合必須停止移動。你下回合仍可重新嘗試此檢定，亦可選擇回頭離開。
+
+  探險者無法與屏障對面的其他探險者戰鬥或互動。怪物永遠忽視屏障，但若怪物結束移動於屏障房間時，其操控者必須決定牠要待在哪一側。
+
+  若任何效果使你落入屏障房間時，你必須決定要落入哪一側。若任何效果指示你放置方形標記在此房（像是\Room{Collapsed Room}或\Event{Secret Passage}），則該標記將永久放置於你選擇的那側。
 \end{RuleBox}
 
-\begin{RuleBox}{\Room{Entrance Hall}、\Room{Foyer}、\Room{Grand Staircase}}%
+\begin{RuleBox}{\Room{Entrance Hall}、\Room{Foyer}、\Room{Grand Staircase}}
   \Room{Entrance Hall}、\Room{Foyer}、\Room{Grand Staircase}在同一個板塊上，但是他們被視為三間分開的房間，從其中一間房間移動至相鄰房間亦需花費１點行動點數。\Room{Grand Staircase}與\Room{Upper Landing}視為兩間分開的房間。
 \end{RuleBox}
 
-\begin{RuleBox}{\Room{Coal Chute}}%
-  當你進這間房間，立即滑落至\Room{Basement Landing}。滑落不需花費行動點數。角色無法結束回合於\RoomBrief{Coal Chute}。
+\begin{RuleBox}{\Room{Coal Chute}}
+  當你進這間房間，立即滑落至\Room{Basement Landing}。滑落不需花費行動點數。角色無法結束回合於\Room*{Coal Chute}。
 \end{RuleBox}
 
-\begin{RuleBox}{\Room{Collapsed Room}}%
-  只有發現這間房間的探險者需執行板塊上印的速度檢定。此後，任何進入此房的探險者忽視房間的效果，並且可以選擇跳進坑洞裡。落至地下不需花費行動點數，但探險者須受到傷害。\par
-  第一個落至地下的探險者需抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並放置一枚\TokenSq{Below Collapsed Room}於探險者落入的房間中。\par
+\begin{RuleBox}{\Room{Collapsed Room}}
+  只有探索這間房間的探險者需執行板塊上印的速度檢定。此後，任何進入此房的探險者忽視房間的效果，並且可以選擇跳進坑洞裡。落至地下不需花費行動點數，但探險者須受到傷害。
+
+  第一個落至地下的探險者需抽取一張地下的房間板塊（若已無未探索的地下房間，則任選一間），跌落至該處，並放置一枚\TokenSq{Below Collapsed Room}於探險者落入的房間中。
+
   若第一個落入地下的角色為怪物，則無須抽新的房間板塊，直接選擇一間以探索的地下房間。
 \end{RuleBox}
 
-\begin{RuleBox}{\Room{Junk Room}}%
-  若你在離開此房間時失去了速度屬性，且你的新速度使你沒有足夠的移動點數離開此房，你依然可以離開此房，並停留在\RoomBrief{Junk Room}與相鄰的房間內。
+\begin{RuleBox}{\Room{Junk Room}}
+  若你在離開此房間時失去了速度屬性，且你的新速度使你沒有足夠的移動點數離開此房，你依然可以離開此房，並停留在\Room*{Junk Room}與相鄰的房間內。
 \end{RuleBox}
 
-\begin{RuleBox}{\Room{Mystic Elevator}}%
-  這個板塊會在你進入時立即移動。擲２顆骰子並把此板塊放置於相對應樓層並連接一扇門。如果檢定結果會導致樓層被封鎖，則電梯不會移動（就算之後可以移開電梯也不行）。若檢定結果為\RoomBrief{Mystic Elevator}所在的樓層，依然可以移動電梯至同樓層的其他門。你一回合僅可使用\RoomBrief{Mystic Elevator}一次。\par
-  叛徒與怪物皆可使用\RoomBrief{Mystic Elevator}，並可無需檢定自由決定要移動至哪個樓層。然而，整個叛徒＋怪物回合階段僅能使用一次電梯，並且電梯會於第一次有叛徒或怪物進入時立即移動。換言之，若叛徒在他的回合使用過\RoomBrief{Mystic Elevator}，則接下來的怪物回合電梯將不再移動。若英雄花費其整個回合於\RoomBrief{Mystic Elevator}中並沒有移動，則他必須於回合結束時擲骰移動電梯。\par
-  如果有多名探險者在\RoomBrief{Mystic Elevator}內，而其中一位在移動電梯時骰到０，則所有探險者必須承受傷害。\par
-  若有任何效果可通往\RoomBrief{Mystic Elevator}（像是\Room{Collapsed Room}或\Event{Secret Passage}），該效果放置的標記將跟隨著電梯一同移動。
+\begin{RuleBox}{\Room{Mystic Elevator}}
+  這個板塊會在你進入時立即移動。擲２顆骰子並把此板塊放置於相對應樓層並連接一扇門。如果檢定結果會導致樓層被封鎖，則電梯不會移動（就算之後可以移開電梯也不行）。若檢定結果為\Room*{Mystic Elevator}所在的樓層，依然可以移動電梯至同樓層的其他門。每個回合僅可使用\Room*{Mystic Elevator}一次。
+
+  叛徒與怪物皆可使用\Room*{Mystic Elevator}，並可無需檢定自由決定要移動至哪個樓層。然而，整個叛徒＋怪物回合階段僅能使用一次電梯，並且電梯會於第一次有叛徒或怪物進入時立即移動。換言之，若叛徒在他的回合使用過\Room*{Mystic Elevator}，則接下來的怪物回合電梯將不再移動。若英雄花費其整個回合於\Room*{Mystic Elevator}中並沒有移動，則他必須於回合結束時擲骰移動電梯。
+
+  如果有多名探險者在\Room*{Mystic Elevator}內，而其中一位在移動電梯時骰到０，則所有探險者必須承受傷害。
+
+  若有任何效果可通往\Room*{Mystic Elevator}（像是\Room{Collapsed Room}或\Event{Secret Passage}），該效果放置的標記將跟隨著電梯一同移動。
 \end{RuleBox}
 
-\begin{RuleBox}{\Room{Vault}}%
-  若任何效果使你落入此房（像是\Room{Collapsed Room}或\Event{Secret Passage}），你只能落入\RoomBrief{Vault}門鎖的外側。當\RoomBrief{Vault}被打開時，放置一枚\TokenSq{Vault Empty}於此房。叛徒仍然需要進行知識檢定來開啟\RoomBrief{Vault}。
+\begin{RuleBox}{\Room{Vault}}
+  若任何效果使你落入此房（像是\Room{Collapsed Room}或\Event{Secret Passage}），你只能落入\Room*{Vault}門鎖的外側。當\Room*{Vault}被打開時，放置一枚\TokenSq{Vault Empty}於此房。叛徒仍然需要進行知識檢定來開啟\Room*{Vault}。
 \end{RuleBox}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{抽牌} \label{ssec:draw}
 
-\subsection{使用道具＆預兆}
+有些房間會有些\textbf{〈符號 Symbol〉}印在板塊上（\EventSymbol{}\ItemSymbol{}\OmenSymbol{}）。當你探索一間有符號的房間時，你本回合必須停止移動（但仍然可以繼續進行回合），並抽對應符號的卡牌。只有第一個探索該房間的玩家抽牌（也只有他必須停止移動）。
 
-\subsection{擲骰判定}
+如果一間房間有\textbf{〈事件 Event〉}符號（一個漩渦\EventSymbol{}），抽一張事件牌。大聲的把卡牌內容唸出，並執行上面的敘述（可能會包含擲骰檢定）。然後棄掉此牌，除非牌上另外有說明。
 
-\subsection{發動攻擊}
+如果一間房間有\textbf{〈道具 Item〉}符號（一顆牛頭\ItemSymbol{}），抽一張道具牌。大聲的把卡牌內容唸出。然後將此牌放在你面前；你現在就擁有這個道具（你將攜帶或穿戴它）。你的每個回合一次，可以立即使用該道具，除非牌上另外有說明。
+
+如果一間房間有\textbf{〈預兆 Omen〉}符號（一隻渡鴉\OmenSymbol{}），抽一張預兆牌。大聲的把卡牌內容唸出。然後將此牌放在你面前；你現在就擁有這個預兆。在你的回合結束，如果作祟尚未發生，你必須在回合結束時進行\textbf{〈作祟檢定 Haunt Roll〉}。（詳見\namepageref{sec:haunt}）
+
+如果你因為房間或卡牌效果而抽新的房間板塊，且該房間上有符號，你亦須抽對應符號的卡牌。如果房間是因為其他理由被放入屋內（如作祟劇本的指示），則第一個進入該房的玩家就無需抽卡牌。
+
+就算你因為抽卡牌而停止移動，你仍然可以進行其他行動（如使用物品）。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{使用道具與預兆}
+
+所有的探險者皆可\textbf{使用}道具。如果作祟劇本有寫的話，某些怪物亦可使用道具。
+你可以在自己的回合中的任何時候使用道具每個一次。\textbf{大多數的預兆卡被視為道具：}保留這些並如同道具般使用。以下用\textbf{物品}通稱道具與視為道具的預兆。可攜帶的物品沒有上限。
+
+在你的回合當中，任何探險者（或可攜帶物品的怪物）皆可進行以下每個動作：
+\begin{itemize}
+  \item \textbf{交易物品}：與另一名在同房間的探險者交易一個物品（雙方都接受的情況下）。
+  \item \textbf{棄置物品}：丟下任意數量的物品（並將一枚\TokenPenta{Item Pile}放置在該房間），其他探險者之後可以撿起任意數量的物品。
+  \item \textbf{撿起物品}：從\TokenPenta{Item Pile}上撿起任意數量的物品。若\TokenPenta{Item Pile}上已無物品，棄掉該標記。
+\end{itemize}
+有些物品不能被交易（或搶奪），但他們可以被棄置或撿起（卡牌上會說明）。
+
+\Omen{Bite}、\Omen{Dog}、\Omen{Girl}、\Omen{Madman}不是物品，所以他們不能被被棄置、交易、或搶奪（卡牌上亦有說明）。
+
+探險者（或可攜帶物品的怪物）對於\textbf{每個物品}每回合僅可進行以下\textbf{其中一個}動作：
+\begin{itemize}
+  \item \textbf{使用}物品。
+  \item \textbf{交易}物品。
+  \item \textbf{棄置}物品。
+  \item \textbf{搶奪}物品（詳見\namepageref{ssec:special-attacks}）。
+  \item \textbf{撿起}物品。
+\end{itemize}
+使用物品包含攻擊、擲骰檢定、或任何與物品相關的動作。舉例：一名探險者不可以在同一個回合中，使用\Omen{Spear}攻擊並交易給另一名探險者。
+
+有些物品會影響你的屬性，若物品給予的屬性值超過該屬性的最高值，多餘的將不會曾將屬性，並自行註記超出了多少級。若之後失去該物品將少扣那麼多級屬性。舉例：若一個物品給予你兩級力量，但你僅需再增加一級便達到最高值，則之後失去該物品僅需扣一級力量。
+
+\begin{RuleBox}{物品標記}
+許多作祟劇本會放置一或多個\textbf{〈物品標記 Item Token〉}屋內，並且有特殊規則敘述其用途。除非劇本另外有說明，否則這些物品標記就如同道具卡與預兆卡一樣，皆可被交易、棄置、或搶奪。
+\end{RuleBox}
+
+\textbf{\Usage{Weapon}}：\Item{Axe}、\Item{Blood Dagger}、\Item{Revolver}、\Omen{Spear}、\Item{Sacrificial Dagger}屬於武器。武器僅能用於攻擊、而非防禦（詳見\namepageref{ssec:make-an-attack}）。你每次攻擊僅能使用一把武器，但能夠同時攜帶多把。亦可選擇不使用武器。
+
+\textbf{\Usage{Companion}}：\Omen{Dog}、\Omen{Girl}、\Omen{Madman}屬於同伴，他們會跟隨照料（擁有）他們的探險者。同伴沒有任何屬性。
+
+\begin{RuleBox}{規則書與卡牌上的規則衝突怎麼辦？}
+  請以卡牌上為準。
+\end{RuleBox}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{擲骰檢定}
+
+在遊戲中的許多時刻，你會需要\textbf{〈擲骰 Roll〉}。每個骰子上皆有六個數字：０、０、１、１、２、２。
+
+每回合的擲骰次數沒有上限。舉例：你可以進入一間需要擲骰的房間，同時又因為某張卡牌的效果進行另一個擲骰。然而，你一個回合不能重複進行同一個擲骰。（舉例：你不能一回合重複嘗試擲骰開啟\Room{Vault}）
+
+當任何卡牌、房間、或其他遊戲效果指示你擲指定數量的骰子時，依循指示並將擲出的數字加總視為\textbf{擲骰結果}。接著根據該結果執行對應的效果。
+
+\textbf{〈\Roll{Damage} Damage Roll〉}：當任何效果寫著『受到１顆骰的物理傷害』，擲１顆骰，並降低總和為擲骰結果的力量和／或速度屬性。若效果給予多於１顆骰的傷害，同時擲該數量的骰子並將擲出的數字加總視為\Roll{Damage}結果。精神傷害亦以相同方式處理，但改為下降知識和神志。
+
+\textbf{〈\Roll{Trait} Trait Roll〉}：有些卡牌、房間、及作祟劇本會指示你根據你的探險者屬性（力量、速度、知識、神志）擲骰。此時，擲等同於該屬性數值數量的骰子。舉例：若你的探險者需進行神智檢定，且她的神志為４，則擲４顆骰子並將擲出的數字加總視為神智檢定結果。無論成功或失敗，該效果會指示你根據結果執行對應的效果。攻擊及防禦（\Roll{Combat}）並非\Roll{Trait}，就算他們牽涉到力量或其他屬性亦否（詳見\namepageref{ssec:make-an-attack}）。
+
+\textbf{〈\Roll{Task} Task Roll〉}：某些作祟劇本會指示你完成某些特定的任務（像是驅邪），你每回合僅能執行該檢定一次，就算該檢定能以多個屬性完成亦是如此（像是可用神志或知識檢定的驅邪一回合也只能檢定一次）。
+
+\emph{附註：\textbf{〈檢定 Roll〉}泛指遊戲中\textbf{〈擲骰 Roll〉}，可視為同義詞（英文即為同一個字）。}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{發動攻擊} \label{ssec:make-an-attack}
+
+\textbf{在作祟發生前無法發動攻擊！}
+
+每回合一次，你可以對一名在同房間的\textbf{〈對手 Opponent〉}發動攻擊。（對手指的是那些想阻止你移動或是妨礙你的探險者或怪物。）當你發動攻擊時，你與對手分別擲等同於自己力量數量的骰子。擲骰結果較大者擊敗其對手，並造成等同於兩者擲骰結果差值的\textbf{物理傷害}。（舉例：若你擲出６而你的對手擲出５，則你對其造成１點物理傷害。）若平手，則雙方皆不會受到傷害。
+
+有些效果讓你可以用力量以外的屬性進行攻擊。攻擊方式與力量攻擊相同，除了雙方皆根據該屬性擲骰而非力量。舉例：若你發動速度攻擊，則你與對手皆以自己的速度擲骰。速度攻擊亦造成物理傷害。神志與知識攻擊則造成\textbf{精神傷害}。
+
+你不能用某種屬性攻擊沒有該屬性的對手。舉例：如果一個怪物沒有神志屬性，則你無法對牠發動神智攻擊。
+
+當你擊敗對手時，你亦可選擇不傷害對手而做些別的事，例如搶奪物品（詳見\namepageref{ssec:special-attacks}）。
+
+怪物被擊敗時僅會被\textbf{〈震懾 Stun〉}而不會死亡，除非作祟劇情有特別規定（詳見\namepageref{ssec:how-monsters-work}）。你依然可以攻擊被震懾的怪物，如果這樣做對你有利的話（例如搶奪物品或是用特殊物品消滅牠）。被震懾的怪物扔然需擲骰防禦，但這種情況下英雄若被擊敗也不會受傷。
+
+你每回合可以同時進行\textbf{作祟相關行動}（在作祟劇情中提到的動作）以及發動攻擊。
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{特殊攻擊} \label{ssec:special-attacks}
+
+\textbf{〈遠程攻擊 Distance Attack〉}：\Item{Revolver}是遠程攻擊的代表。它允許你攻擊一位在\textbf{〈視線 Line of Sight〉}內房間（從你所在的房間往任何方向，透過任何未受阻礙的門直線延伸的所有房間）的對手。你若被擊敗也不會受傷。某些怪物亦可發動遠程攻擊。
+
+\textbf{〈搶奪物品 Stealing Item〉}：當你擊敗任何對手並造成２點物理傷害，你可選擇不造成傷害而\textbf{〈搶奪 Steal〉}一個可被交易的物品。發動遠程攻擊時無法搶奪物品。有些作祟劇情亦有關於搶奪的特殊規則。
+
+\begin{RuleBox}{戰鬥範例}
+假設你的探險者，Jenny LeClerc，正在攻擊一隻狼人。她的力量為４，故她擲４顆骰攻擊。假設你擲出了５，而叛徒替狼人擲出了８！Jenny因此受到了３點物理傷害。假設你選擇將力量降低２級（至３），並將速度降低１級（依然為４）。Jenny依然活著，但她受傷了！
+
+\emph{附註：Jenny LeClerc 的力量由大到小分別為『８、６、５、４、４、\textcolor{teal}{「４」}、４、３、骷髏』，速度為『８、６、５、４、\textcolor{teal}{「４」}、４、３、２、骷髏』，其中「」為起始值。}
+\end{RuleBox}
