--- a/rule.tex
+++ b/rule.tex
@@ -1,14 +1,16 @@
 %!TEX program = xelatex
 
-\documentclass[10pt, a4paper, twocolumn]{article}
+\documentclass[10pt, a5paper]{article}
 
 \usepackage[cm]{fullpage}
+\usepackage{indentfirst}
 \usepackage{enumitem}
 
 \usepackage{bhh}
 \usepackage{component/rule}
+\usepackage{component/image}
 
-\newcommand{\namepageref}[1]{p.\pageref{#1}「\nameref{#1}」章節}
+\newcommand{\namepageref}[1]{p.\pageref{#1}『\nameref{#1}』章節}
 
 \setlength{\columnsep}{1cm}
 \setlength{\parindent}{2em}
@@ -23,7 +25,6 @@
 
 \maketitle
 \tableofcontents
-
 \pagebreak
 
 \input{src/rule/intro}
