--- a/src/card/bhh/omen.tex
+++ b/src/card/bhh/omen.tex
@@ -5,7 +5,7 @@
     一聲咆哮，瀰漫著死亡的氣息，\\
     接續著痛苦、黑暗，然後消失⋯
   \end{CardStory}
-  當你抽到此卡時，某種東西突然咬上了你！\smallbreak
+  當你抽到此牌時，某種東西突然咬上了你！\smallbreak
   你的右方的玩家代替神秘生物，擲４顆骰子對你的攻擊，你以力量進行防禦。\smallbreak
   攻擊後，神秘生物又再一次隱沒在黑暗當中。\smallbreak
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
@@ -26,13 +26,13 @@
   \end{CardStory}
   在作祟發生後，每回合一次，你可進行知識檢定嘗試窺視\ThisName{}：
   \begin{itemize}
-    \item[4+] 你看見真相。從道具牌堆中選擇一張卡，將牌堆洗勻後將選擇的卡放在牌堆頂端。
+    \item[4+] 你看見真相。從道具牌堆中選擇一張牌，將牌堆洗勻後將選擇的牌放在牌堆頂端。
     \item[1-3] 你不自覺的地避開了視線。失去１級神志。
     \item[0] 你直視了地獄景象。失去２級神志。
   \end{itemize}
 \end{OmenCard}%
 \linebreak[0]%
-\begin{OmenCard}{bhh}{Dog}{companion}
+\begin{OmenCard}{bhh}{Dog}{Companion}
   \begin{CardStory}
     看似友善的癩皮狗⋯\\
     至少你希望牠是⋯
@@ -45,7 +45,7 @@
   \ThisName{}不可被棄置、交易、或搶奪。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
-\begin{OmenCard}{bhh}{Girl}{companion}
+\begin{OmenCard}{bhh}{Girl}{Companion}
   \begin{CardStory}
     被困住的孤獨女孩，你拯救了她！
   \end{CardStory}
@@ -62,7 +62,7 @@
   若你失去\ThisName{}，立即失去２級神志。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
-\begin{OmenCard}{bhh}{Madman}{companion}
+\begin{OmenCard}{bhh}{Madman}{Companion}
   \begin{CardStory}
     口吐白沫、胡言亂語的瘋漢。
   \end{CardStory}
@@ -106,7 +106,7 @@
   當你受到精神傷害時，可將所有的傷害轉為物理傷害，但不可只轉換部分傷害。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
-\begin{OmenCard}{bhh}{Spear}{weapon}
+\begin{OmenCard}{bhh}{Spear}{Weapon}
   \begin{CardStory}
     充滿能量而震動的武器。
   \end{CardStory}
