--- a/component/image.sty
+++ b/component/image.sty
@@ -1,9 +1,9 @@
 \RequirePackage{graphicx}
 
 \newcommand{\ImgBackground}[2]{\includegraphics[width=#2]{img/#1_background.png}}
-\newcommand{\ImgSymbol}[2]{\includegraphics[width=#2]{img/#1_symbol.png}}
-\newcommand{\ImgSeries}[2]{\includegraphics[width=#2]{img/#1.png}}
+\newcommand{\ImgSymbol}[2]{\includegraphics[height=#2]{img/#1_symbol.png}}
+\newcommand{\ImgSeries}[2]{\includegraphics[height=#2]{img/#1.png}}
 
-\newcommand{\EventSymbol}{\raisebox{-0.25em}{\ImgSymbol{event}{1.5em}}}
-\newcommand{\ItemSymbol}{\raisebox{-0.25em}{\ImgSymbol{item}{1.5em}}}
-\newcommand{\OmenSymbol}{\raisebox{-0.25em}{\ImgSymbol{omen}{1.5em}}}
+\newcommand{\EventSymbol}{\raisebox{-0.25em}{\ImgSymbol{event}{1em}}}
+\newcommand{\ItemSymbol}{\raisebox{-0.25em}{\ImgSymbol{item}{1em}}}
+\newcommand{\OmenSymbol}{\raisebox{-0.25em}{\ImgSymbol{omen}{1em}}}
