--- a/src/card/bhh/omen.tex
+++ b/src/card/bhh/omen.tex
@@ -3,7 +3,7 @@
 \begin{OmenCard}{bhh}{Bite}{}
   \begin{CardStory}
     一聲咆哮，瀰漫著死亡的氣息，\\
-    接續著痛苦、黑暗，然後消失⋯
+    接續著痛苦、黑暗，然後消失…
   \end{CardStory}
   當你抽到此牌時，某種東西突然咬上了你！\smallbreak
   你的右方的玩家代替神秘生物，擲４顆骰子對你的攻擊，你以力量進行防禦。\smallbreak
@@ -34,8 +34,8 @@
 \linebreak[0]%
 \begin{OmenCard}{bhh}{Dog}{Companion}
   \begin{CardStory}
-    看似友善的癩皮狗⋯\\
-    至少你希望牠是⋯
+    看似友善的癩皮狗…\\
+    至少你希望牠是…
   \end{CardStory}
   立即獲得１級力量和１級神志。\smallbreak
   若你失去\ThisName{}，立即失去１級力量和１級神志。\smallbreak
