--- a/src/card/bww/omen.tex
+++ b/src/card/bww/omen.tex
@@ -5,7 +5,7 @@
     深綠森林沉寂的午夜裡，\\
     有著深紅色脈動的石頭。\\
     人們說，你無法從石頭汲取血液，\\
-    看來他們指的不是這一顆⋯
+    看來他們指的不是這一顆…
   \end{CardStory}
   每回合一次，當你進行任何\Roll{Trait}前，可摩擦\ThisName{}並犧牲１級任意屬性，多擲２顆骰（至多８顆）。\smallbreak
 \end{OmenCard}%
@@ -13,7 +13,7 @@
 \begin{OmenCard}{bww}{Box}{}
   \begin{CardStory}
     人們老是告訴你要跳脫框架思考，\\
-    但你現在該擔心的是會死在裡面⋯
+    但你現在該擔心的是會死在裡面…
   \end{CardStory}
   當抽到\ThisName{}時，再抽取１張道具牌放在此牌上面。\smallbreak
   \ThisName{}內的物品不可被棄置或搶奪。當有人要搶奪這個物品，你可以棄掉\ThisName{}以避免該物品被奪走。\smallbreak
@@ -62,14 +62,14 @@
 \begin{OmenCard}{bww}{Photograph}{}
   \begin{CardStory}
     當你看著這張照片時，它的景象漸漸變成這棟屋子裡的另一間房間。\\
-    大概還是這棟屋子吧⋯
+    大概還是這棟屋子吧…
   \end{CardStory}
   當你探索新房間時，你可以將第一張抽到的房間板塊棄掉，重新抽取新的（合乎探索規則的）房間板塊，並進行探索。\smallbreak
 \end{OmenCard}%
 \linebreak[0]%
 \begin{OmenCard}{bww}{Rope}{}
   \begin{CardStory}
-    今天應該沒有用來吊死誰⋯吧？
+    今天應該沒有用來吊死誰…吧？
   \end{CardStory}
   你可以從直接爬上\Room{Coal Chute}，亦可從\Room{Ballroom}爬到\Room{Gallery}。\smallbreak
   當你經過\Room{Chasm}時，無需進行檢定。\smallbreak
@@ -79,7 +79,7 @@
 \linebreak[0]%
 \begin{OmenCard}{bww}{Vial}{}
   \begin{CardStory}
-    一位老瘋婆說，你該喝下那瓶閃爍著琥珀色光芒的藥水。也許這就是她會變成這副德性的原因⋯
+    一位老瘋婆說，你該喝下那瓶閃爍著琥珀色光芒的藥水。也許這就是她會變成這副德性的原因…
   \end{CardStory}
   此後每回合一次，你可擲２顆骰嘗試喝下琥珀色藥水：
   \begin{itemize}
