--- a/src/rule/intro.tex
+++ b/src/rule/intro.tex
@@ -2,7 +2,7 @@
 
 \section{介紹} \label{sec:intro}
 
-在山中小屋中，每個玩家選擇一位\textbf{〈探險者 Explorer〉}來探索這個令人毛骨悚然的老舊房屋。當你探索這個房屋，你會發現新的房間。每次你進到一間新的房間，你將可能發現些什麼⋯或是有什麼會發現你。影響遊戲的進行，取決於探險者對於房屋中的各個驚喜的反應（無論好壞）。每次遊玩這個遊戲，房屋皆會有所不同。
+在山中小屋中，每個玩家選擇一位\textbf{〈探險者 Explorer〉}來探索這個令人毛骨悚然的老舊房屋。當你探索這個房屋，你會發現新的房間。每次你進到一間新的房間，你將可能發現些什麼…或是有什麼會發現你。影響遊戲的進行，取決於探險者對於房屋中的各個驚喜的反應（無論好壞）。每次遊玩這個遊戲，房屋皆會有所不同。
 
 在遊戲中的某個隨機時刻，其中一位探險者將會觸發一個劇情——稱為\textbf{〈作祟 Haunt〉}。當作祟被揭露時，其中一名探險者將成為\textbf{〈叛徒 Traitor〉}，全力對抗他／她原來的夥伴。而其餘的探險者將成為\textbf{〈英雄 Hero〉}，為了自己的生存而奮鬥。從此刻起，遊戲變成了叛徒與英雄間的戰鬥——通常至死方休。
 
