--- a/src/rule/main.tex
+++ b/src/rule/main.tex
@@ -8,7 +8,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{屬性／檢定}
+\subsection{屬性}
 
 每位探險者皆有四個\textbf{〈屬性 Trait〉}，由角色卡四邊的四排數字所表示：\textbf{〈力量 Might〉}、\textbf{〈速度 Speed〉}、\textbf{〈知識 Knowledge〉}、\textbf{〈神志 Sanity〉}。力量與速度為\textbf{〈物理 Physical〉}屬性，而知識與神志為\textbf{〈精神 Mental〉}屬性。
 
@@ -34,7 +34,7 @@
   \item \textbf{執行擲骰}，
   \item \textbf{發動攻擊}（一回合一次，僅能在作祟發生後執行）。
 \end{itemize}
-在作祟發生前，若你抽到預兆牌，你必須在回合結束時進行\textbf{〈作祟檢定 Haunt Roll〉}。作祟發生後，遊戲將會有些許的改變。（詳見\namepageref{sec:haunt}）
+在作祟發生前，若你抽到預兆牌，你必須在回合結束時進行\textbf{〈作祟檢定 Haunt Roll〉}。作祟發生後，遊戲將會有些許的改變（詳見\namepageref{sec:haunt}）。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -128,11 +128,11 @@
 
 如果一間房間有\textbf{〈道具 Item〉}符號（一顆牛頭\ItemSymbol{}），抽一張道具牌。大聲的把卡牌內容唸出。然後將此牌放在你面前；你現在就擁有這個道具（你將攜帶或穿戴它）。你的每個回合一次，可以立即使用該道具，除非牌上另外有說明。
 
-如果一間房間有\textbf{〈預兆 Omen〉}符號（一隻渡鴉\OmenSymbol{}），抽一張預兆牌。大聲的把卡牌內容唸出。然後將此牌放在你面前；你現在就擁有這個預兆。在你的回合結束，如果作祟尚未發生，你必須在回合結束時進行\textbf{〈作祟檢定 Haunt Roll〉}。（詳見\namepageref{sec:haunt}）
+如果一間房間有\textbf{〈預兆 Omen〉}符號（一隻渡鴉\OmenSymbol{}），抽一張預兆牌。大聲的把卡牌內容唸出。然後將此牌放在你面前；你現在就擁有這個預兆。在你的回合結束，如果作祟尚未發生，你必須在回合結束時進行\textbf{〈作祟檢定 Haunt Roll〉}（詳見\namepageref{sec:haunt}）。
 
-如果你因為房間或卡牌效果而抽新的房間板塊，且該房間上有符號，你亦須抽對應符號的卡牌。如果房間是因為其他理由被放入屋內（如作祟劇本的指示），則第一個進入該房的玩家就無需抽卡牌。
+如果你因為房間或卡牌效果而抽新的房間板塊，且該房間上有符號，你亦須抽對應符號的卡牌。如果房間是因為其他理由被放入屋內（如作祟劇本的指示），則第一個進入該房的玩家就無需抽牌。
 
-就算你因為抽卡牌而停止移動，你仍然可以進行其他行動（如使用物品）。
+就算你因為抽牌而停止移動，你仍然可以進行其他行動（如使用物品）。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
