--- a/src/card/bhh/event.tex
+++ b/src/card/bhh/event.tex
@@ -13,7 +13,7 @@
 \begin{EventCard}{bhh}{Angry Being}
   \begin{CardStory}
     牠從牆上的黏液中冒出。\\
-    而且⋯就在你身邊⋯
+    而且…就在你身邊…
   \end{CardStory}
   請立即進行速度檢定：
   \begin{itemize}
@@ -27,8 +27,8 @@
   \begin{CardStory}
     牆壁因血液而潮濕，\\
     鮮血從天花板不停滴下，\\
-    流過牆壁、傢俱，直到你的鞋子⋯\\
-    轉眼之間，又全都消失⋯
+    流過牆壁、傢俱，直到你的鞋子…\\
+    轉眼之間，又全都消失…
   \end{CardStory}
   請立即進行神志檢定：
   \begin{itemize}
@@ -43,7 +43,7 @@
     全身著火的男子從房間跑過，\\
     濃膩的水泡在皮膚上冒出並破裂，\\
     最後只剩下炙熱的頭骨，\\
-    頭顱撞擊至地面後，持續滾動⋯
+    頭顱撞擊至地面後，持續滾動…
   \end{CardStory}
   請立即進行神志檢定：
   \begin{itemize}
@@ -56,7 +56,7 @@
 \begin{EventCard}{bhh}{Closet Door}
   \begin{CardStory}
     壁櫥的門半掩著，\\
-    裡面肯定有什麼東西躲藏著⋯
+    裡面肯定有什麼東西躲藏著…
   \end{CardStory}
   放置一枚\TokenSq{Closet}在此房。\smallbreak
   每回合一次，任何探險者皆可擲２顆骰子嘗試打開\TokenSq*{Closet}：
@@ -71,7 +71,7 @@
   \begin{CardStory}
     成千上萬的爬蟲，\\
     落在你的皮膚上，\\
-    鑽進衣服、頭髮之中⋯
+    鑽進衣服、頭髮之中…
   \end{CardStory}
   請立即進行神志檢定：
   \begin{itemize}
@@ -86,7 +86,7 @@
     散亂的雜物中，\\
     你發現一個令你毛骨悚然的傀儡。\\
     在你們四目相接時，\\
-    他突然拿起小小的矛向你跳去⋯
+    他突然拿起小小的矛向你跳去…
   \end{CardStory}
   你的右方的玩家代替\ThisName{}，對你的進行力量４的攻擊。\smallbreak
   若你因此受傷，除你以外擁有\Omen{Spear}的玩家，獲得２級力量。\smallbreak
@@ -94,7 +94,7 @@
 \linebreak[0]%
 \begin{EventCard}{bhh}{Debris}
   \begin{CardStory}
-    泥灰從天花板及牆上不斷掉落⋯
+    泥灰從天花板及牆上不斷掉落…
   \end{CardStory}
   \footnotesize
   請立即進行速度檢定：
@@ -113,8 +113,8 @@
     嬰兒的哭泣聲殷殷響起，\\
     控訴著被遺棄的命運。\\
     緊接著是一聲尖叫，\\
-    以及刺耳的玻璃碎裂聲⋯\\
-    接著，一切恢復寂靜⋯
+    以及刺耳的玻璃碎裂聲…\\
+    接著，一切恢復寂靜…
   \end{CardStory}
   擲６顆骰子：
   \begin{itemize}
@@ -125,7 +125,7 @@
 \linebreak[0]%
 \begin{EventCard}{bhh}{Drip... Drip... Drip...}
   \begin{CardStory}
-    一段有節奏的聲音刺激你的腦袋⋯
+    一段有節奏的聲音刺激你的腦袋…
   \end{CardStory}
   放置一枚\TokenSq{Drip}在此房。\smallbreak
   此後，任何探險者在此房間進行的\Roll{Trait}，皆少擲１顆骰子（至少１顆）。\smallbreak
@@ -137,7 +137,7 @@
     塵土向上飛揚，骯髒的地板上\\
     浮現了一步步的腳印。\\
     而就在它們快碰到你時，\\
-    卻消失了⋯
+    卻消失了…
   \end{CardStory}
   請立即擲１顆骰（如果你位於\Room{Crypt}，多擲１顆）：
   \begin{itemize}
@@ -152,7 +152,7 @@
 \begin{EventCard}{bhh}{Funeral}
   \begin{CardStory}
     你看見一口打開的棺材，\\
-    而你正躺在裡面⋯
+    而你正躺在裡面…
   \end{CardStory}
   請立即進行神志檢定：
   \begin{itemize}
@@ -167,7 +167,7 @@
   \begin{CardStory}
     這房間覆蓋著一層厚厚的墳土，\\
     塵土飄至皮膚，\\
-    你吸入肺中而咳嗽⋯
+    你吸入肺中而咳嗽…
   \end{CardStory}
   請立即進行力量檢定：
   \begin{itemize}
@@ -182,7 +182,7 @@
     你轉身看見一名穿園丁服的男人，\\
     他舉起鏟子，朝你衝來。\\
     而就在鏟子快擊中你時，\\
-    卻消失了，只留下滿地的泥濘⋯
+    卻消失了，只留下滿地的泥濘…
   \end{CardStory}
   請立即進行知識檢定（如果你位於\Room{Gardens}，少擲２顆）：
   \begin{itemize}
@@ -198,7 +198,7 @@
     他們靜靜地擺動著，\\
     用冰冷、死亡的眼神注視著你，\\
     接著逐漸化為塵土，\\
-    令你感到窒息⋯
+    令你感到窒息…
   \end{CardStory}
   請立即對所有屬性進行檢定：
   \begin{itemize}
@@ -211,7 +211,7 @@
 \begin{EventCard}{bhh}{Hideous Shriek}
   \begin{CardStory}
     一開始聽起來像耳語，\\
-    但最後卻變成了撕裂靈魂的驚叫⋯
+    但最後卻變成了撕裂靈魂的驚叫…
   \end{CardStory}
   請所有探險者立即進行神志檢定：
   \begin{itemize}
@@ -230,7 +230,7 @@
     你瞭解到這是不同時空中的自己，\\
     而他需要幫助。於是你在鏡面寫下\smallbreak
     { \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\smallbreak
-    並透過鏡子遞給他一件物品⋯
+    並透過鏡子遞給他一件物品…
 \end{CardStory}
   若你手上沒有道具牌，則由下一位持有道具牌的玩家觸發此效果。\smallbreak
   選擇１張你所擁有的道具牌，洗入道具牌庫中。獲得１級知識。\smallbreak
@@ -245,7 +245,7 @@
     你瞭解到這是不同時空中的自己，\\
     而他會幫助你。倒影在鏡面寫下\smallbreak
     \scalebox{-1}[1]{ \FontScript 這 \enskip 會 \enskip 有 \enskip 用 \enskip 的 }\smallbreak
-    並透過鏡子遞給你一件物品⋯
+    並透過鏡子遞給你一件物品…
 \end{CardStory}
   抽取１張道具牌。\smallbreak
 \end{EventCardSp}%
@@ -253,7 +253,7 @@
 \begin{EventCard}{bhh}{It is Meant to Be}
   \begin{CardStory}
     你跌坐在地上，\\
-    未來的影像閃過你的腦海⋯
+    未來的影像閃過你的腦海…
   \end{CardStory}
   請選擇一項事件發生：
   \begin{itemize}
@@ -267,7 +267,7 @@
     兩個小男孩在玩陀螺。\\
     男孩：「約拿，你也想玩呀？」\\
     約拿：「不，這只有我可以玩！」\\
-    語畢，約拿抓起陀螺，猛力砸向男孩的臉。影像逐漸模糊，依然可看見小男孩倒在血泊中，而約拿卻不停地砸向男孩的臉⋯
+    語畢，約拿抓起陀螺，猛力砸向男孩的臉。影像逐漸模糊，依然可看見小男孩倒在血泊中，而約拿卻不停地砸向男孩的臉…
 \end{CardStory}
   持有\Item{Puzzle Box}的探險者，必須立即將它丟棄（送給約拿玩），並抽取１張道具牌。\smallbreak
   若此事發生，你獲得１級神志，否則你失去１級神志。\smallbreak
@@ -276,7 +276,7 @@
 \begin{EventCard}{bhh}{Lights Out}
   \begin{CardStory}
     你的手電筒忽然熄滅。\\
-    別擔心，總會有人帶著電池的⋯
+    別擔心，總會有人帶著電池的…
   \end{CardStory}
   保留此牌，往後的回合你的行動步數降至１格。\smallbreak
   直到你回合結束時，有其他探險者與你處在同一房間之中，棄掉牌片並恢復正常移動。\smallbreak
@@ -287,7 +287,7 @@
   \begin{CardStory}
     在肖像畫後方的牆上，\\
     你發現了一個隱藏的保險箱。\\
-    當然，它肯定有某種陷阱⋯
+    當然，它肯定有某種陷阱…
   \end{CardStory}
   放置一枚\TokenSq{Safe}在此房。\smallbreak
   每回合一次，任何探險者皆可進行知識檢定嘗試打開\TokenSq*{Safe}：
@@ -301,8 +301,8 @@
 \begin{EventCard}{bhh}{Mists From the Walls}
   \begin{CardStory}
     霧氣從牆上湧現，\\
-    煙霧之中浮現了滿滿的人臉⋯\\
-    有些看來甚至不像人類⋯
+    煙霧之中浮現了滿滿的人臉…\\
+    有些看來甚至不像人類…
   \end{CardStory}
   所有位於地下的玩家，立即進行神志檢定：
   \begin{itemize}
@@ -314,7 +314,7 @@
 \linebreak[0]%
 \begin{EventCard}{bhh}{Mystic Slide}
   \begin{CardStory}
-    你腳下的地板，忽然滑落並鬆開⋯
+    你腳下的地板，忽然滑落並鬆開…
   \end{CardStory}
   \footnotesize
   若你位於地下，則由下一位不在地下玩家觸發此效果。\smallbreak
@@ -330,7 +330,7 @@
 \begin{EventCard}{bhh}{Night View}
   \begin{CardStory}
     一對幽魂情侶掠過你的面前，\\
-    身穿結婚禮服無聲地漫步著⋯
+    身穿結婚禮服無聲地漫步著…
   \end{CardStory}
   請立即進行知識檢定：
   \begin{itemize}
@@ -342,13 +342,13 @@
 \begin{EventCard}{bhh}{Phone Call}
   \begin{CardStory}
     房內的電話忽然響起，\\
-    你不自覺地接起這通電話⋯
+    你不自覺地接起這通電話…
   \end{CardStory}
   請立即擲２顆骰子，一名和藹的奶奶對你說：
   \begin{itemize}
     \item[4] 『茶點和蛋糕！茶點和蛋糕！你永遠是我的小可愛！』\\
 獲得１級神志。
-    \item[3] 『我一直都在你的身邊呀！小可愛，看著⋯』\\
+    \item[3] 『我一直都在你的身邊呀！小可愛，看著…』\\
 獲得１級知識。
     \item[1-2] 『我在這，小可愛！給我一個吻吧！』\\
 受到１顆骰的精神傷害。
@@ -362,7 +362,7 @@
     牆上分裂出數道黑影，\\
     你一時受到震驚而無法動作。\\
     黑影卻仍包圍著，\\
-    一股惡寒從你心裡冷出來⋯
+    一股惡寒從你心裡冷出來…
   \end{CardStory}
   請立即選擇任一種屬性進行檢定：
   \begin{itemize}
@@ -373,7 +373,7 @@
 \linebreak[0]%
 \begin{EventCard}{bhh}{Revolving Wall}
   \begin{CardStory}
-    牆面旋轉至另一個地方⋯
+    牆面旋轉至另一個地方…
   \end{CardStory}
   選定該房一面沒有門的牆壁，放置一枚\TokenSq{Wall Switch}在該牆壁上，並立即前往牆後的房間（若牆後無房間則為它抽１間）。\smallbreak
   開關雙面可用，此後每回合一次，任何探險者皆可進行知識檢定嘗試尋找\ThisName{}的機關：
@@ -387,7 +387,7 @@
   \begin{CardStory}
     這房間的味道簡直糟透了！\\
     聞起來像死亡，\\
-    有如屠宰場的鮮血⋯
+    有如屠宰場的鮮血…
   \end{CardStory}
   請立即進行神志檢定：
   \begin{itemize}
@@ -401,7 +401,7 @@
 \begin{EventCard}{bhh}{Secret Passage}
   \begin{CardStory}
     牆壁的一部分滑了開來，\\
-    一道發霉的通道正在等著你⋯
+    一道發霉的通道正在等著你…
   \end{CardStory}
   放置一枚\TokenSq{Secret Passage}在此房。\smallbreak
   請立即擲３顆骰子，並放置另一枚標記於：
@@ -418,7 +418,7 @@
 \begin{EventCard}{bhh}{Secret Stairs}
   \begin{CardStory}
     一道毛骨悚然的聲響環繞著你，\\
-    你發現了一個秘密階梯⋯
+    你發現了一個秘密階梯…
   \end{CardStory}
   放置一枚\TokenSq{Secret Stairs}在此房，並放置另一枚標記於另一樓層的任意一間房間中。\smallbreak
   你現在就可以使用\TokenSq*{Secret Stairs}，就算你已耗盡行動步數亦可。若你選擇現在使用階梯，到達新房間時，必須再抽取１張事件牌。\smallbreak
@@ -428,7 +428,7 @@
 \begin{EventCard}{bhh}{Shrieking Wind}
   \begin{CardStory}
     風勢持續地增強，\\
-    緩慢地漸強成刺耳的咆嘯聲⋯
+    緩慢地漸強成刺耳的咆嘯聲…
   \end{CardStory}
   請所有位於\Room{Balcony}、\Room{Gardens}、\Room{Graveyard}、\Room{Patio}、\Room{Tower}、以及任何窗口向外房間的探險者，立即進行力量檢定：
   \begin{itemize}
@@ -442,7 +442,7 @@
 \begin{EventCard}{bhh}{Silence}
   \begin{CardStory}
     在地底下，任何事物都變得沈默，\\
-    彷彿連呼吸聲都消失了⋯
+    彷彿連呼吸聲都消失了…
   \end{CardStory}
   請所有位於地下的探險者，立即進行神志檢定：
   \begin{itemize}
@@ -455,7 +455,7 @@
 \begin{EventCard}{bhh}{Skeletons}
   \begin{CardStory}
     即使成了骨骸，\\
-    母親與孩子仍然緊緊擁抱著⋯
+    母親與孩子仍然緊緊擁抱著…
   \end{CardStory}
   放置一枚\TokenSq{Skeletons}在此房。\smallbreak
   每回合一次，任何探險者皆可進行神志檢定嘗試挖掘\TokenSq*{Skeletons}：
@@ -468,7 +468,7 @@
 \begin{EventCard}{bhh}{Smoke}
   \begin{CardStory}
     煙霧在你四周翻騰，\\
-    你一邊咳嗽、一邊擦著眼淚⋯
+    你一邊咳嗽、一邊擦著眼淚…
   \end{CardStory}
   放置一枚\TokenSq{Smoke}在此房。\smallbreak
   煙霧會阻礙視線。\smallbreak
@@ -479,7 +479,7 @@
   \begin{CardStory}
     這房間似乎有些古怪，\\
     但到底會是什麼呢？\\
-    這問題持續困擾著你⋯
+    這問題持續困擾著你…
   \end{CardStory}
   請立即進行知識檢定以找出原因：
   \begin{itemize}
@@ -492,7 +492,7 @@
   \begin{CardStory}
     在你腳踝上的是什麼東西？\\
     是一隻蟲？是誰的觸角？\\
-    還是一隻死人的手⋯
+    還是一隻死人的手…
   \end{CardStory}
   請立即進行速度檢定：
   \begin{itemize}
@@ -506,7 +506,7 @@
   \begin{CardStory}
     拳頭般大小的蜘蛛，\\
     突然落在你的肩膀上，\\
-    爬入你的頭髮⋯
+    爬入你的頭髮…
   \end{CardStory}
   請立即進行速度檢定嘗試撥開他，或是進行神志檢定嘗試保持冷靜：
   \begin{itemize}
@@ -531,7 +531,7 @@
   \begin{CardStory}
     一名身穿美國內戰晚禮服的女子，\\
     正揮手招喚著你，\\
-    不久後，你便陷入了催眠中⋯
+    不久後，你便陷入了催眠中…
   \end{CardStory}
   \footnotesize
   請立即進行知識檢定：
@@ -550,9 +550,9 @@
 \linebreak[0]%
 \begin{EventCard}{bhh}{The Voice}
   \begin{CardStory}
-    「我在地底下，被埋在地底下⋯」\\
+    「我在地底下，被埋在地底下…」\\
     微弱的聲音只說出這樣一句，\\
-    便不再發聲⋯
+    便不再發聲…
   \end{CardStory}
   請立即進行知識檢定：
   \begin{itemize}
@@ -565,7 +565,7 @@
   \begin{CardStory}
     在這間溫暖的房間中，\\
     活生生的牆壁有如心跳得正動，\\
-    你的心臟也跟著這屋子的節奏拍打。忽然間，你被吸入牆壁之中⋯
+    你的心臟也跟著這屋子的節奏拍打。忽然間，你被吸入牆壁之中…
   \end{CardStory}
   請立即抽取一張新的房間板塊，並移到此處。\smallbreak
 \end{EventCard}%
@@ -573,7 +573,7 @@
 \begin{EventCard}{bhh}{Webs}
   \begin{CardStory}
     一如往常，你伸手把蜘蛛網撥開，\\
-    但這次沒能成功，你被黏住了⋯
+    但這次沒能成功，你被黏住了…
   \end{CardStory}
   請立即進行力量檢定：
   \begin{itemize}
@@ -589,7 +589,7 @@
   \begin{CardStory}
     當你回頭轉向經過的房間時，\\
     卻什麼也沒看到，\\
-    只留下一層迷霧⋯
+    只留下一層迷霧…
   \end{CardStory}
  請將你身處的房間板塊移至同一樓層中，任一尚未探索的門後，房間上的所有標記皆一起移動。\smallbreak
 \end{EventCard}%
@@ -598,7 +598,7 @@
   \begin{CardStory}
     你發現腳下似乎有什麼東西，\\
     正要躲開時，卻被牠狠狠擊倒，\\
-    只聽見一陣咯咯笑聲離你遠去⋯
+    只聽見一陣咯咯笑聲離你遠去…
   \end{CardStory}
  請將你所有的道具牌（不包含預兆牌）覆蓋於桌面，由你右邊的玩家隨機選擇丟棄其中一張。\smallbreak
 \end{EventCard}%
