--- a/src/card/bhh/item.tex
+++ b/src/card/bhh/item.tex
@@ -60,7 +60,7 @@
   \begin{CardStory}
     一把齷齪的武器，\\
     針管自劍柄延伸出，\\
-    深深地插入你的靜脈中⋯
+    深深地插入你的靜脈中…
   \end{CardStory}
   當你使用\ThisName{}進行力量攻擊時，多擲３顆骰（至多８顆），並失去１級速度。\smallbreak
   \ThisName{}不得用於防禦。\smallbreak
@@ -89,8 +89,8 @@
 \linebreak[0]%
 \begin{ItemCard}{bhh}{Candle}{}
   \begin{CardStory}
-    能夠驅散陰影⋯\\
-    至少你希望它真能如此⋯
+    能夠驅散陰影…\\
+    至少你希望它真能如此…
   \end{CardStory}
   當你因事件而進行檢定時，多擲１顆骰（至多８顆）。\smallbreak
   若你同時持有\Item{Bell}、\Omen{Book}、\Item{Candle}時，立即獲得２級全屬性。但若你失去任何一樣，立即失去２級全屬性。\smallbreak
@@ -114,7 +114,7 @@
 \linebreak[0]%
 \begin{ItemCard}{bhh}{Dynamite}{}
   \begin{CardStory}
-    引信尚未點燃⋯
+    引信尚未點燃…
   \end{CardStory}
   在你的一次攻擊中，你可以使用\ThisName{}取代攻擊，將\ThisName{}點然並扔進一間相鄰的房間。該房間的所有探險者與怪物，皆需進行速度檢定：
   \begin{itemize}
@@ -135,8 +135,8 @@
 \linebreak[0]%
 \begin{ItemCard}{bhh}{Idol}{}
   \begin{CardStory}
-    祂選擇你或許是為了某些目的⋯\\
-    像是活體獻祭⋯
+    祂選擇你或許是為了某些目的…\\
+    像是活體獻祭…
   \end{CardStory}
   每回合一次，當你進行任何\Roll*{Trait}、\Roll*{Combat}、或\Roll{Event}前，可摩擦\ThisName{}並犧牲１級神志，多擲２顆骰（至多８顆）。\smallbreak
 \end{ItemCard}%
@@ -197,7 +197,7 @@
 \begin{ItemCard}{bhh}{Rabbit’s Foot}{}
   \begin{CardStory}
     帶來幸運的左後腳，\\
-    但那隻兔子就不怎麼幸運了⋯
+    但那隻兔子就不怎麼幸運了…
   \end{CardStory}
   每回合一次，你可重擲一顆骰子。你必須使用重擲後的結果。\smallbreak
 \end{ItemCard}%
@@ -231,7 +231,7 @@
 \linebreak[0]%
 \begin{ItemCard}{bhh}{Smelling Salts}{}
   \begin{CardStory}
-    深深吸了一口⋯
+    深深吸了一口…
   \end{CardStory}
   可自行使用，或用於治療同房的探險者。\smallbreak
   被\ThisName{}治療的探險者，將知識恢復至初始值。\smallbreak
