--- a/src/card/bww/event.tex
+++ b/src/card/bww/event.tex
@@ -7,7 +7,7 @@
     用著溫暖的微笑歡迎你的到來。\\
     女人舉起一根在燭光下閃閃發光、\\
     比她頭髮還要細的長針，\\
-    幾乎就要刺入你的眼裡⋯
+    幾乎就要刺入你的眼裡…
   \end{CardStory}
   立即移至任一相鄰的房間。失去１級神志，或是進行力量檢定嘗試反抗：
   \begin{itemize}
@@ -20,7 +20,7 @@
 \begin{EventCard}{bww}{Burial Mound}
   \begin{CardStory}
     散落的碎石掩埋著一具\\
-    新鮮的屍體⋯太新鮮了⋯
+    新鮮的屍體…太新鮮了…
   \end{CardStory}
   放置一枚\TokenSq{Burial Mound}在此房。\smallbreak
   作祟發生後，任何探險者離開此房間時皆受到死屍的攻擊。其右方的玩家代替死屍，進行力量４的攻擊。\smallbreak
@@ -49,7 +49,7 @@
     聳立在燈光及各種管線間。\\
     它的葉子枯黃、巨大的花莢半開，\\
     期待著營養的補給。\\
-    它需要水分⋯你的血⋯
+    它需要水分…你的血…
   \end{CardStory}
   立即受到１顆骰的物理傷害。\smallbreak
   放置一枚\TokenSq{Plant}在此房。\smallbreak
@@ -67,7 +67,7 @@
     她停下動作並轉頭，\\
     向你招手示意加入他的遊戲。\\
     正當你還沒回過神來，\\
-    電視螢幕已陷入一片黑暗⋯
+    電視螢幕已陷入一片黑暗…
   \end{CardStory}
   請立即進行神志檢定：
   \begin{itemize}
@@ -90,7 +90,7 @@
 \linebreak[0]%
 \begin{EventCard}{bww}{Misty Arch}
   \begin{CardStory}
-    一座被彩色迷霧籠罩的拱門⋯
+    一座被彩色迷霧籠罩的拱門…
   \end{CardStory}
   你可自由選擇是否走進此拱門。\smallbreak
   若你決定走進此拱門，請立即擲３顆骰子：
@@ -110,7 +110,7 @@
     一聲嚎叫。難道兩隻貓？\\
     但搔抓的聲音又只有一個。\\
     難道他有兩個頭？\\
-    你試著將牆面鑿開一探究竟⋯
+    你試著將牆面鑿開一探究竟…
   \end{CardStory}
   請立即進行一次速度檢定：
   \begin{itemize}
@@ -127,7 +127,7 @@
     但尖叫聲在喉嚨嘎然而止。\\
     突然，你發現自己沒有任何知覺，\\
     你試圖動動手指，卻發現那手\\
-    彷彿有意識地向你的喉嚨靠近⋯
+    彷彿有意識地向你的喉嚨靠近…
   \end{CardStory}
   請選擇一項：
   \begin{itemize}
@@ -143,7 +143,7 @@
     他們的眼睛看似跟隨著你的行動。\\
     難道這只是畫像的把戲？\\
     不，這些沈默的死人臉\\
-    正試著告訴你什麼事⋯
+    正試著告訴你什麼事…
   \end{CardStory}
   請立即進行一次神志檢定：
   \begin{itemize}
@@ -159,7 +159,7 @@
     發現自己似乎曾在幾年前來過。\\
     窗戶映射出你的樣貌，\\
     而你的臉龐看起來仍是那麼年輕。\\
-    不過這次你早已不再天真⋯
+    不過這次你早已不再天真…
   \end{CardStory}
   失去１點神志，並獲得１點力量和１點知識。\smallbreak
   若作祟已經發生，則另一方必須大聲朗讀他們劇本上的斜體字開場白及獲勝的故事文字。若作祟尚未發生，保留此牌直到作祟發生為止。\smallbreak
